Change some cors settings working on Factory Spec builder and graalVM